--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.18",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
